<?xml version="1.0" encoding="UTF-8"?>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg">
    

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton 
            android:id="@+id/srch_btn"
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_share"
            android:src="@drawable/title_share"
            android:onClick="onClickShare" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
         <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.61" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/jomo" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageView1"
            android:text="@string/history"
            android:textStyle="bold"
            android:paddingBottom="10.0dip"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="14sp"
            android:typeface="serif" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:text="@string/history1"
            android:padding="10.0dip" 
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="14sp"
            android:typeface="serif" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView2"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/norfolk" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageView2"
            android:text="@string/history2"
            android:textColor="#040404"
            android:textStyle="bold"
            android:paddingBottom="10.0dip"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="14sp"
            android:typeface="serif" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView3"
            android:text="@string/history3"
            android:padding="10.0dip" 
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="14sp"
            android:typeface="serif" />
        
        
        </RelativeLayout>
            
        
        
 </LinearLayout>
</ScrollView>
</LinearLayout>